Fix: use password_field for password and update .gemspec

--- a/app/views/invoice_bar/users/_form.html.erb
+++ b/app/views/invoice_bar/users/_form.html.erb
@@ -9,7 +9,7 @@
 	  </div>
 	  <div class="control-group">
 	    <%= f.label :password, t('attributes.user.password') %>
-	    <%= f.text_field :password, placeholder: t('attributes.user.password'), class: 'suggested' %>
+	    <%= f.password_field :password, placeholder: t('attributes.user.password'), class: 'suggested' %>
 	  </div>
 		<div class="control-group">
 	    <%= f.label :name, t('attributes.user.name') %>
