Add accounts overview

--- a/app/assets/stylesheets/invoice_bar/tables.css.scss
+++ b/app/assets/stylesheets/invoice_bar/tables.css.scss
@@ -12,3 +12,7 @@
 	.issue_date, .due_date { width: 80px; text-align: right; }
 	.state { width: 50px; }
 }
+
+
+.debt { color: red; }
+.healthy { color: green; }
