--- a/app/views/invoice_bar/documents/_show.html.erb
+++ b/app/views/invoice_bar/documents/_show.html.erb
@@ -7,7 +7,9 @@
 		<%= link_to t('buttons.destroy'), invoice_path(document), method: :delete, confirm: t('buttons.destroy_confirm'), class: 'btn' %>
 		<%= link_to "Zobrazit v PDF", invoice_path(document, format: 'pdf'), class: 'btn' %>
 		
-
+		<% if document.receipt_id %>
+			<%= link_to "Doklad", receipt_path(document.receipt_id)%>
+		<% end %>
 <% end %>
 
 <% if document.instance_of? InvoiceBar::Receipt %>
