--- a/app/views/invoice_bar/documents/_show.html.erb
+++ b/app/views/invoice_bar/documents/_show.html.erb
@@ -6,7 +6,7 @@
 		<%= link_to t('buttons.edit'), edit_invoice_path(document), class: 'btn' %>
 		<%= link_to t('buttons.destroy'), invoice_path(document), method: :delete, confirm: t('buttons.destroy_confirm'), class: 'btn' %>
 		<%= link_to "Zobrazit v PDF", invoice_path(document, format: 'pdf'), class: 'btn' %>
-		
+
 		<% if document.receipt_id %>
 			<%= link_to "Doklad", receipt_path(document.receipt_id)%>
 		<% end %>
@@ -39,9 +39,9 @@
 			<div class="name">
 				<strong><%= document.user_name %></strong>
 			</div>
-	
-			<%= render 'invoice_bar/forms/address', address: document.user_address %>
-	
+
+			<%= render 'invoice_bar/forms/address', address: document.address %>
+
 			<% unless document.user_ic.blank? %>
 				<div class='ic-dic'>
 					<div class="ic">
@@ -60,12 +60,12 @@
 			<div class="name">
 				<strong><%= document.contact_name %></strong>
 			</div>
-		
+
 			<%= render 'invoice_bar/forms/address', address: document.address if document.address %>
-		
+
 			<% unless document.contact_ic.blank? %>
 				<div class='ic-dic'>
-				
+
 					<div class="ic">
 						<span><%= t('attributes.contact.ic') %>:</span> <%= document.contact_ic %>
 					</div>
@@ -80,7 +80,7 @@
 	</div>
 
 	<div class="span5 fixmax5">
-		<fieldset class="account">	
+		<fieldset class="account">
 			<div class="top">
 				<%= t('attributes.invoice.payment') %>
 			</div>
