--- a/app/views/invoice_bar/invoices/edit.html.erb
+++ b/app/views/invoice_bar/invoices/edit.html.erb
@@ -1,1 +1,1 @@
-<%= render partial: 'invoice_bar/forms/document', locals: { :document => @invoice } %>
+<%= render partial: 'invoice_bar/forms/document', locals: { document: @invoice } %>
