--- a/app/views/invoice_bar/invoices/new.html.erb
+++ b/app/views/invoice_bar/invoices/new.html.erb
@@ -1,4 +1,3 @@
 <h1><%= t('links.new_invoice') %></h1>
 
-<%= render 'invoice_bar/forms/document', :document => @invoice %>
-
+<%= render 'invoice_bar/forms/document', document:  @invoice %>
