--- a/app/views/invoice_bar/receipts/edit.html.erb
+++ b/app/views/invoice_bar/receipts/edit.html.erb
@@ -1,1 +1,1 @@
-<%= render partial: 'invoice_bar/forms/document', locals: { :document => @receipt } %>
+<%= render partial: 'invoice_bar/forms/document', locals: { document: @receipt } %>
