--- a/app/views/invoice_bar/settings/index.html.erb
+++ b/app/views/invoice_bar/settings/index.html.erb
@@ -2,7 +2,7 @@
 	<h1>Nastavení</h1>
 	<div class="row">
 		<%= form_for @user do |f| %>
-		  <%= render 'invoice_bar/forms/errors', :model => @user %>
+		  <%= render 'invoice_bar/forms/errors', model:  @user %>
 
 			<div class="span3">
 				<h4>Konto</h4>
