--- a/app/views/invoice_bar/invoice_templates/edit.html.erb
+++ b/app/views/invoice_bar/invoice_templates/edit.html.erb
@@ -1,2 +1,1 @@
-<%= render partial: 'invoice_bar/forms/document', locals: { :document => @invoice_template } %>
-
+<%= render partial: 'invoice_bar/forms/document', locals: { document: @invoice_template } %>
