--- a/app/views/invoice_bar/invoice_templates/new.html.erb
+++ b/app/views/invoice_bar/invoice_templates/new.html.erb
@@ -1,3 +1,3 @@
 <h1><%= t('links.new_invoice_template') %></h1>
 
-<%= render partial: 'invoice_bar/forms/document', locals: { :document => @invoice_template } %>
+<%= render partial: 'invoice_bar/forms/document', locals: { document: @invoice_template } %>
