--- a/app/views/invoice_bar/receipt_templates/edit.html.erb
+++ b/app/views/invoice_bar/receipt_templates/edit.html.erb
@@ -1,1 +1,1 @@
-<%= render partial: 'invoice_bar/forms/document', locals: { :document => @receipt_template } %>
+<%= render partial: 'invoice_bar/forms/document', locals: { document: @receipt_template } %>
