--- a/app/views/invoice_bar/receipt_templates/new.html.erb
+++ b/app/views/invoice_bar/receipt_templates/new.html.erb
@@ -1,3 +1,3 @@
 <h1><%= t('links.new_receipt_template') %></h1>
 
-<%= render partial: 'invoice_bar/forms/document', locals: { :document => @receipt_template } %>
+<%= render partial: 'invoice_bar/forms/document', locals: { document: @receipt_template } %>
