--- a/app/views/invoice_bar/receipts/new.html.erb
+++ b/app/views/invoice_bar/receipts/new.html.erb
@@ -1,4 +1,3 @@
 <h1><%= t('links.new_receipt') %></h1>
 
-<%= render 'invoice_bar/forms/document', :document => @receipt %>
-
+<%= render 'invoice_bar/forms/document', document: @receipt %>
