--- a/app/assets/stylesheets/invoice_bar/document.css.scss
+++ b/app/assets/stylesheets/invoice_bar/document.css.scss
@@ -138,8 +138,8 @@ fieldset .top {
   body input.street_number { width: 20%; margin-left: 4%; }
   html body input.contact_name { width: 100%; }
   html body select.contact_name-select { width: 100%; }
-  body input.contact_ic { width: 90%; }
-  html body input.contact_dic { width: 100%; }
+  body input.contact_tax_id { width: 90%; }
+  html body input.contact_tax_id2 { width: 100%; }
   .fixmax4 { max-width: 100%; }
   .fixmax5 { max-width: 100%; }
 
@@ -152,8 +152,8 @@ fieldset .top {
   body input.street_number { width: 20%; margin-left: 4%; }
   html body input.contact_name { width: 100%; }
   html body select.contact_name-select { width: 100%; }
-  body input.contact_ic { width: 90%; }
-  body input.contact_dic { width: 100%; }
+  body input.contact_tax_id { width: 90%; }
+  body input.contact_tax_id2 { width: 100%; }
   .fixmax4 { max-width: 100%; }
   .fixmax5 { max-width: 100%; }
 
