--- a/app/assets/stylesheets/invoice_bar/forms.css.scss
+++ b/app/assets/stylesheets/invoice_bar/forms.css.scss
@@ -15,8 +15,8 @@ form .item {
 //form .item { clear: both; }
 body input.contact_name { width: 90%; }
 body select.contact_name-select { width: 76%; margin-right: 1%; }
-body input.contact_ic { width: 70%; }
-body input.contact_dic { width: 90%; }
+body input.contact_tax_id { width: 70%; }
+body input.contact_tax_id2 { width: 90%; }
 
 .radio { float: left; width: 60px }
 
