--- a/app/views/invoice_bar/contacts/_form.html.erb
+++ b/app/views/invoice_bar/contacts/_form.html.erb
@@ -7,12 +7,12 @@
         <%= f.text_field :name, :class => 'suggested', placeholder: t('attributes.contact.name') %>
       </div>
       <div class="control-group">
-        <%= f.label :ic, t('attributes.contact.ic') %>
-        <%= f.text_field :ic, :class => 'suggested', placeholder: t('attributes.contact.ic') %>
+        <%= f.label :tax_id, t('attributes.contact.tax_id') %>
+        <%= f.text_field :tax_id, :class => 'suggested', placeholder: t('attributes.contact.tax_id') %>
       </div>
       <div class="control-group ">
-        <%= f.label :dic, t('attributes.contact.dic') %>
-        <%= f.text_field :dic, :class => 'optional', placeholder: t('attributes.contact.dic') %>
+        <%= f.label :tax_id2, t('attributes.contact.tax_id2') %>
+        <%= f.text_field :tax_id2, :class => 'optional', placeholder: t('attributes.contact.tax_id2') %>
       </div>
     </div>
     <div class="span4 fixmax4">
