--- a/app/views/invoice_bar/contacts/show.html.erb
+++ b/app/views/invoice_bar/contacts/show.html.erb
@@ -21,11 +21,11 @@
       <b><%= t('attributes.contact.bank_account') %></b>
       <%= @contact.bank_account %>
       <br>
-      <b><%= t('attributes.contact.ic') %></b>
-      <%= @contact.ic %>
+      <b><%= t('attributes.contact.tax_id') %></b>
+      <%= @contact.tax_id %>
       <br>
-      <b><%= t('attributes.contact.dic') %></b>
-      <%= @contact.dic %>
+      <b><%= t('attributes.contact.tax_id2') %></b>
+      <%= @contact.tax_id2 %>
     </div>
 
     <% if @contact.address %>
