--- a/app/views/invoice_bar/users/_form.html.erb
+++ b/app/views/invoice_bar/users/_form.html.erb
@@ -15,8 +15,8 @@
       <%= f.text_field :name, placeholder: t('attributes.user.name'), class: 'suggested' %>
     </div>
     <div class="control-group">
-      <%= f.label :ic, t('attributes.user.ic') %>
-      <%= f.text_field :ic, placeholder: t('attributes.user.ic'), class: 'suggested' %>
+      <%= f.label :tax_id, t('attributes.user.tax_id') %>
+      <%= f.text_field :tax_id, placeholder: t('attributes.user.tax_id'), class: 'suggested' %>
     </div>
   </div>
   <div class="span3">
