--- a/app/views/invoice_bar/users/index.html.erb
+++ b/app/views/invoice_bar/users/index.html.erb
@@ -5,7 +5,7 @@
     <tr>
       <th><%= t('attributes.user.id') %></th>
       <th class="name"><%= t('attributes.user.name') %></th>
-      <th><%= t('attributes.user.ic') %></th>
+      <th><%= t('attributes.user.tax_id') %></th>
       <th class="hidden-phone"><%= t('attributes.user.email') %></th>
       <th></th>
     </tr>
@@ -20,7 +20,7 @@
           <span><%= user.name %></span>
         </td>
         <td>
-          <span><%= user.ic %></span>
+          <span><%= user.tax_id %></span>
         </td>
         <td class="hidden-phone">
           <span><%= user.email %></span>
