Add support for document notes

--- a/app/views/invoice_bar/documents/_show.html.erb
+++ b/app/views/invoice_bar/documents/_show.html.erb
@@ -110,3 +110,7 @@
 <div id="total">
   Celkem <%= formatted_amount(document.amount, document.account.currency_symbol) %>
 </div>
+
+<div id="items">
+  <%= "Poznámka: #{document.note}" if document.note %>
+</div>
