--- a/app/views/invoice_bar/forms/_document.html.erb
+++ b/app/views/invoice_bar/forms/_document.html.erb
@@ -1,5 +1,18 @@
 <%# Form for invoices, bills and receipts %>
-<%= nested_form_for(document) do |f| %>
+<%
+  @url = case document.class.to_s
+         when 'InvoiceBar::Invoice'
+           action_name != 'edit' ? invoices_path : invoice_path(number: document.number)
+         when 'InvoiceBar::Receipt'
+           action_name != 'edit' ? receipts_path : receipt_path(number: document.number)
+         when 'InvoiceBar::InvoiceTemplate'
+           action_name != 'edit' ? invoice_templates_path : invoice_template_path(document)
+         when 'InvoiceBar::ReceiptTemplate'
+           action_name != 'edit' ? receipt_templates_path : receipt_template_path(document)
+         end
+  @method = (action_name == 'edit') ? :patch : :post
+-%>
+<%= nested_form_for(document, url: @url, method: @method) do |f| %>
   <%= render 'invoice_bar/forms/errors', model: document %>
   <% if document.instance_of? InvoiceBar::Invoice or document.instance_of? InvoiceBar::Receipt %>
     <div id="prefill-form" class="row" style="display:none">
@@ -117,6 +130,10 @@
     <%= f.fields_for :items do |f|
        render 'invoice_bar/forms/item_fields', f: f
     end -%>
+  </div>
+
+  <div class="items">
+    <%= f.text_field :note, placeholder: I18n.t('attributes.invoice.note') %>
   </div>
 
   <%# Links and buttons %>
