Fix saving addresses

--- a/app/views/invoice_bar/settings/index.html.erb
+++ b/app/views/invoice_bar/settings/index.html.erb
@@ -25,7 +25,9 @@
       </div>
       <div class="span3">
         <h4>Adresa</h4>
-        <%= render 'invoice_bar/forms/address_fields', f: f -%>
+        <%= f.fields_for :address do |f|
+          render 'invoice_bar/forms/address_fields', f: f
+        end -%>
       </div>
       <div class="span10">
          <%= f.submit I18n.t('buttons.save'), :class => 'btn' %>
