--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,14 +1,16 @@
 <div class="navbar">
   <div class="navbar-inner">
     <div class="container">
-      <%= link_to t('invoice_bar.invoice_bar'), root_url, class: 'brand' %>
+      <a class="brand" href="/">
+        <img src="/logo.png" width=50 height=50 />
+      </a>
       <% if current_user %>
         <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <div class="nav-collapse collapse">
+        <div class="nav-collapse2 collapse2">
           <ul class="nav">
             <li class="<%= active_for_controller('/invoice') %>"><%= link_to t('invoice_bar.navbar.invoices'), invoices_path %></li>
             <li class="<%= active_for_controller('/receipt') %>"><%= link_to t('invoice_bar.navbar.receipts'), receipts_path %></li>
