Add ability to add deposit invoices at /invoices/new_deposit

--- a/app/views/forms/_document.html.erb
+++ b/app/views/forms/_document.html.erb
@@ -63,6 +63,11 @@
     </div>
     <% end %>
   <% end %>
+
+  <% if document.instance_of? Invoice %>
+    <%= f.hidden_field :invoice_type %>
+  <% end %>
+
   <% if document.instance_of? Invoice %>
     <div class="span4 fixmax4">
       <div class="control-group" style="margin-top:25px;margin-left:10px">
