Allow pair item with deposit invoice from UI

--- a/app/assets/stylesheets/invoice_bar/forms.css.scss
+++ b/app/assets/stylesheets/invoice_bar/forms.css.scss
@@ -10,6 +10,7 @@ form .item {
   .unit { width: 90px; input { width: 40px; text-align: right; } }
   .number { width: 108px; input { width: 40px; text-align: right; } }
   .price { width: 210px; input { width: 100px; text-align: right; } }
+  .deposit-invoice { width: 350px; input { width: 100px; text-align: right; } }
   .remove { padding-top: 5px; padding-left: 3px; }
 }
 //form .item { clear: both; }
